# maths

./: .gitignore  CMakeLists.txt  Makefile  README.md  lu-decomp.cpp  lu-decomp.h  main.cpp  matrix.cpp  matrix.h  sample_mx.txt  todo.md
include/: Fraction.h  Matrix.h  MatrixOld.h  Vector.h  fraction.h  lazy.h  lu-decomp.h  rational.h  vectors.h
src/: CMakeLists.txt  lazy.cpp  lu-decomp.cpp  lu-decomp.h  main.cpp  matrix.cpp  matrix.h  rational.cpp
test/: CMakeLists.txt  lazy_test.cpp  matrix_test.cpp  rational_test.cpp  test_fraction.cpp  test_lazy.cpp  test_matrix.cpp  test_matrix_old.cpp  test_vector.cpp  test_vectors.cpp  vectors.cpp  vectors_test.cpp
